--- a/app/src/main/res/layout/fragment_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_confirm_order.xml
@@ -111,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="View Order"
+            android:text="Done"
             android:textAllCaps="false" />
 
     </LinearLayout>
