--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,18 +64,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:fab_label="Pick custom colour"
+                app:srcCompat="@drawable/favcolor"
                 app:fab_size="mini"
                 app:fab_colorNormal="@color/colorPrimary"
                 app:fab_colorPressed="@color/colorAccent"/>
 
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/palette_picker_fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fab_label="Pick custom palette"
-                app:fab_size="mini"
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_colorPressed="@color/colorAccent"/>
         </com.github.clans.fab.FloatingActionMenu>
 
     </android.support.constraint.ConstraintLayout>
