--- a/app/src/main/res/layout-large/fragment_profile.xml
+++ b/app/src/main/res/layout-large/fragment_profile.xml
@@ -76,6 +76,7 @@
                         android:visibility="gone" />
 
                     <TextView
+                        android:id="@+id/no_recent_orders"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/standard_padding"
